--- a/html/resource/css/main/style.css
+++ b/html/resource/css/main/style.css
@@ -741,7 +741,7 @@ body.scrollLock { overflow: hidden; }
 .contents-wrap .job_info_wrap .category_wrap .selet_wrap { margin-bottom: 20px; position: relative; } 
 .contents-wrap .job_info_wrap .category_wrap .selet_wrap .select_btn { width: 100%; height: 35px; padding-left: 10px; position: relative; background: #fff; color: #777777; font-size: 15px; font-family: inherit; border: 0; border-bottom: 1px solid #C4C4C4; cursor: pointer; text-align: left; box-sizing: border-box; } 
 .contents-wrap .job_info_wrap .category_wrap .selet_wrap .select_btn:focus { border: 0; border-bottom: 1px solid #C4C4C4; } 
-.contents-wrap .job_info_wrap .category_wrap .selet_wrap .select_btn::after { content: ''; width: 12px; height: 10px; position: absolute; top: 50%; transform: translateY(-50%); right: 10px; background: url(./images/main_2024/sub/ico_btn_style01.png) no-repeat; } 
+.contents-wrap .job_info_wrap .category_wrap .selet_wrap .select_btn::after { content: ''; width: 12px; height: 10px; position: absolute; top: 50%; transform: translateY(-50%); right: 10px; background: url(../../../page/images/main_2024/sub/ico_btn_style01.png) no-repeat; } 
 .contents-wrap .job_info_wrap .category_wrap .selet_wrap .select_btn.active::after { transform: translateY(-50%) rotate(180deg); } 
 .contents-wrap .job_info_wrap .category_wrap .selet_wrap .select_list { display: none; position: absolute; width: 100%; top: 40px; left: 0; background: #fff; border: 1px solid #e5e5e5; box-sizing: border-box; border-radius: 5px; z-index: 100; } 
 .contents-wrap .job_info_wrap .category_wrap .selet_wrap .select_btn.active + .select_list { display: block; } 
@@ -766,7 +766,7 @@ body.scrollLock { overflow: hidden; }
 .contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap ul li .ct_txt em { color: #008ae0; font-weight: 900; } 
 .contents-wrap .job_info_wrap .content_wrap .tab_cont_wrap .cont_list { display: none; } 
 .contents-wrap .job_info_wrap .content_wrap .tab_cont_wrap .cont_list.active { display: block; } 
-.contents-wrap .job_info_wrap .content_wrap .tab_cont_wrap .cont_list .nodata { display: flex; width: 100%; min-height: 200px; color: #5c5c5c; font-size: 22px; font-weight: 300; align-items: center; justify-content: center; } 
+.contents-wrap .job_info_wrap .content_wrap .tab_cont_wrap .cont_list .nodata { display: flex; width: 100%; min-height: 200px; color: #5c5c5c; font-size: 18px; font-weight: 300; align-items: center; justify-content: center; } 
 .contents-wrap .job_info_wrap .cont_list .check_wrap .item { position: relative; } 
 .contents-wrap .job_info_wrap .cont_list .check_wrap .item input[type="checkbox"] { position: absolute; top: 0; left: 0; opacity: 0; } 
 .contents-wrap .job_info_wrap .cont_list .check_wrap .item label { display: inline-flex; height: 34px; padding: 0 16px; background: #fff; color: #777777; font-size: 13px; border: 1px solid #e5e5e5; border-radius: 5px; box-sizing: border-box; justify-content: center; align-items: center; } 
@@ -868,11 +868,7 @@ body.scrollLock { overflow: hidden; }
  .contents-wrap .job_info_wrap .content_wrap .cont_top .tit_area { order: 1; } 
  .contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap { padding: 0 0 20px; order: 2; overflow-x: auto; } 
  .contents-wrap .job_info_wrap .content_wrap .cont_top .tag_area { order: 3; } 
-.contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap ul::after { content: none; } 
-.contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap ul li { width: auto; background: #e8e8e8; border: 0; } 
-.contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap ul li:not(:first-child) { border-left: 1px solid #fff; } 
-.contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap ul li a { padding: 12px 20px; font-size: 13px; flex-wrap: initial; white-space: nowrap; } 
-.contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap ul li.active { background: #fff; border: 0; } 
+
 .contents-wrap .job_info_wrap .cont_list .check_wrap { margin-left: 10px; } 
 .contents-wrap .job_info_wrap .cont_list .check_wrap .item label { padding: 0 10px; font-size: 12px; } 
 .contents-wrap .job_info_wrap .cont_list .check_wrap .item label::before { width: 12px; height: 11px; margin-right: 4px; background-size: contain; } 
@@ -881,8 +877,15 @@ body.scrollLock { overflow: hidden; }
 
 @media all and (max-width: 640px) { 
     body[data-chatbot="no"] { #ch-plugin { display: none !important; } 
+    
  } 
  }
 @media all and (max-width: 480px){
  .contents-wrap .job_info_wrap .content_wrap .cont_list_area .info_list .d_txt_area .edu_link .edu_link_list { left: -60px; } 
+ .contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap ul::after { content: none; } 
+ .contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap ul li { width: auto; background: #e8e8e8; border: 0; } 
+ .contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap ul li:not(:first-child) { border-left: 1px solid #fff; } 
+ .contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap ul li a { padding: 12px 20px; font-size: 13px; flex-wrap: initial; white-space: nowrap; } 
+ .contents-wrap .job_info_wrap .content_wrap .cont_top .tab_list_wrap ul li.active { background: #fff; border: 0; } 
+
  }
